--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   font-size: 18px;
   line-height: 1.4;
   color: #f5f6f7;
-  background-image: linear-gradient( 15deg, rgba(58, 58, 158, 0.4), rgba(136, 136, 206, 0.7) ), url(./Images/diving-emotion.jpg);
+  background-image: linear-gradient( 15deg, rgba(58, 58, 158, 0.4), rgba(136, 136, 206, 0.7) ), url(./Images/diving-fun.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -56,7 +56,7 @@ form {
   width: 80vw;
   max-width: 720px;
   min-width: 300px;
-  background-color: #252445e8;
+  background-color: #252445a8;
   border-radius: 4px;
 }
 
