--- a/styles.css
+++ b/styles.css
@@ -52,12 +52,19 @@ header {
 
 form {
   margin: 0 auto;
-  padding: 2.7rem;
+  padding: 3.7rem;
   width: 80vw;
   max-width: 720px;
   min-width: 300px;
   background-color: #252445a8;
-  border-radius: 4px;
+  border-radius: 14px;
+}
+
+@media screen and (max-width:450px) {
+  form {
+    padding: 2rem;
+    width: 90vw;
+  }
 }
 
 form p {
