--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,37 @@ body {
   font-size: 18px;
   line-height: 1.4;
   color: #f5f6f7;
-  background-image: linear-gradient( 15deg, rgba(58, 58, 158, 0.4), rgba(136, 136, 206, 0.7) ), url(./Images/diving-fun.jpg);
+  background-image: linear-gradient( 5deg, rgba(58, 58, 158, 0.2), rgba(136, 136, 206, 0.3) ), url(./Images/diving-emotion.jpg);
   background-size: cover;
+  /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   background-position: center;
   padding-bottom: 34px;
+}
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
+
+/* Style the button used to pause/play the video */
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: #ddd;
+  color: black;
 }
 
 h1, p {
@@ -25,13 +51,25 @@ h1, p {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 42px;
+  line-height: 1.2;
   font-weight: 600;
-  text-shadow: 2px 2px 30px #333;
+  text-shadow: 2px 2px 30px rgba(58, 58, 158, 0.4);
+  padding: 0 10px;
+  padding-bottom: 10px;
+}
+
+.top-header {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 header {
-  padding: 30px 0
+  padding: 0 0 30px 0
 }
 
 #title {
@@ -39,11 +77,13 @@ header {
 }
 
 #description {
-  font-style: italic;
-  font-weight: 200;
-  margin-bottom: 0px;
-  margin-top: 10px;
-  text-shadow: 2px 2px 10px #333;
+  font-weight: 600;
+  /*text-transform: uppercase;*/
+  letter-spacing: 2px;
+  max-width: 600px;
+  /*margin: 10px auto 0px auto;*/
+  /*text-shadow: 4px 4px 10px rgba(136, 136, 206, 0.8);*/
+  /*padding: 0 10px;*/
 }
 
 .clue {
@@ -54,10 +94,14 @@ form {
   margin: 0 auto;
   padding: 3.7rem;
   width: 80vw;
-  max-width: 720px;
+  max-width: 620px;
   min-width: 300px;
-  background-color: #252445a8;
-  border-radius: 14px;
+  background-color: #25244538;
+  backdrop-filter: blur(19px);
+  -webkit-backdrop-filter: blur(15px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
 }
 
 @media screen and (max-width:450px) {
